Attempt at fixing errors failed

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -41,7 +41,7 @@
                     <div class="card-body">
                         <form class="create-form">
                             <div class="form-group">
-                                <textarea class="form-control text-center" id="burgerEntry" row="3"></textarea>
+                                <textarea class="form-control text-center" id="newBurger" row="3"></textarea>
                             </div>
                             <button type="submit" class="btn btn-primary">Submit!</button>
                         </form>
