--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
 		{{{ body }}}
 
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-	<script src="/assets/js/script.js"></script>
+	<script src="/assets/js/app.js"></script>
 
 	</body>
 </html>
